--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,9 @@
     "lib": [
       "es2018",
       "dom"
+    ],
+    "typeRoots": [
+      "src/alertifytype.d.ts"
     ]
   },
   "angularCompilerOptions": {
